Add input markup and JS to add todos.

--- a/meteor-todos.html
+++ b/meteor-todos.html
@@ -7,7 +7,9 @@
 		<header>
 			<h1>Todo List</h1>
 		</header>
-
+		<form action="" class="new-task">
+			<input type="text" name="text" placeholder="Type to add new tasks.">
+		</form>
 		<ul>
 			{{#each tasks}}
 				{{> task}}
