Add hideCompleted toggle.

--- a/meteor-todos.html
+++ b/meteor-todos.html
@@ -6,6 +6,11 @@
 	<div class="container">
 		<header>
 			<h1>Todo List</h1>
+			<label for="" class="hide-completed">
+				<input type="checkbox" checked="{{hideCompleted}}">
+				Hide Completed Tasks
+			</label>
+
 		</header>
 		<form action="" class="new-task">
 			<input type="text" name="text" placeholder="Type to add new tasks.">
